--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,10 +3,10 @@ server {
     listen [::]:80 default_server;
 
     root   /usr/share/nginx/www;
-    index /curl.class.php;
+    index /public/index.php;
 
     location / {
-        try_files $uri $uri/ /curl.class.php?$query_string;
+        try_files $uri $uri/ /public/index.php?$query_string;
     }
 
     location ~ \.php$ {
